Added simple Player controller and State Machine

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,61 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"Node3D",
+"class": &"HeadMovement",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/HeadMovement.gd"
+}, {
+"base": &"PlayerState",
+"class": &"PlayerCrouch",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/PlayerCrouch.gd"
+}, {
+"base": &"PlayerState",
+"class": &"PlayerIdle",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/PlayerIdle.gd"
+}, {
+"base": &"PlayerState",
+"class": &"PlayerJump",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/PlayerJump.gd"
+}, {
+"base": &"PlayerState",
+"class": &"PlayerMidAir",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/PlayerMidAir.gd"
+}, {
+"base": &"PlayerState",
+"class": &"PlayerSlide",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/PlayerSlide.gd"
+}, {
+"base": &"PlayerState",
+"class": &"PlayerSprint",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/PlayerSprint.gd"
+}, {
+"base": &"State",
+"class": &"PlayerState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/PlayerState.gd"
+}, {
+"base": &"PlayerState",
+"class": &"PlayerWalk",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/PlayerWalk.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/states/State.gd"
+}])
