--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/HeadMovement.gd"
 }, {
+"base": &"Node3D",
+"class": &"Interactable",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/InteractableMonitor.gd"
+}, {
 "base": &"PlayerState",
 "class": &"PlayerCrouch",
 "icon": "",
