Added working letter checking

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -25,7 +25,8 @@ last_selected_language="GDScript"
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0.0980392, 0.0980392, 0.0980392, 0.0745098, 0.0980392, 0.0980392, 0.0980392, 0.129412, 0.0980392, 0.0980392, 0.0980392, 0.117647, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1)
+recent_presets=PackedColorArray(0.894922, 0.894922, 0.894922, 1, 0.672965, 1, 0.513028, 1, 0.333333, 1, 0, 1, 0.662452, 0.662452, 0.662452, 1, 0.456665, 0.700983, 0.81663, 1, 0.492, 0.716133, 0.82, 1, 0.54, 0.786, 0.9, 1, 1, 0.79915, 0.799952, 1, 1, 1, 1, 1)
+color_mode=1
 
 [texture_region_editor]
 
