--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -17,6 +17,7 @@ search_help=Rect2(4480, 360, 1280, 720)
 [linked_properties]
 
 MeshInstance3D:scale=false
+StandardMaterial3D:uv1_scale=true
 
 [script_setup]
 
@@ -25,7 +26,7 @@ last_selected_language="GDScript"
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0.0807833, 0.0807833, 0.0807833, 1, 0.76662, 0.76662, 0.76662, 1, 0.77, 0, 0, 1, 1, 0.618496, 0.737685, 1, 1, 0.00999999, 0.3235, 1, 1, 0.00999999, 0.00999999, 1, 0.74, 0.00739999, 0.00739999, 1, 0.69, 0.00689999, 0.00689999, 1, 0.69, 0, 0, 1)
+recent_presets=PackedColorArray(0.69, 0, 0, 1, 0.427493, 0.427493, 0.427493, 1, 0.466181, 0.466181, 0.466181, 1, 0.633757, 0.633757, 0.633757, 1, 0.462291, 0.462291, 0.462291, 1, 0.341879, 0.516733, 0.295246, 1, 0.211831, 0.333581, 0.179281, 1, 0.247811, 0.322414, 0.202812, 1, 0.23155, 0.3, 0.189, 1)
 color_mode=1
 
 [texture_region_editor]
