--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Interactable",
+"class": &"Computer",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/Computer.gd"
+}, {
 "base": &"Node3D",
 "class": &"HeadMovement",
 "icon": "",
@@ -9,7 +15,13 @@ list=Array[Dictionary]([{
 "class": &"Interactable",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scripts/InteractableMonitor.gd"
+"path": "res://scripts/Interactable.gd"
+}, {
+"base": &"Interactable",
+"class": &"OfficePrinter",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/OfficePrinter.gd"
 }, {
 "base": &"PlayerState",
 "class": &"PlayerCrouch",
