--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,7 +3,7 @@ list=Array[Dictionary]([{
 "class": &"Computer",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scripts/Computer.gd"
+"path": "res://scripts/Interactables/Computer.gd"
 }, {
 "base": &"Node3D",
 "class": &"HeadMovement",
@@ -15,13 +15,13 @@ list=Array[Dictionary]([{
 "class": &"Interactable",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scripts/Interactable.gd"
+"path": "res://scripts/Interactables/Interactable.gd"
 }, {
 "base": &"Interactable",
 "class": &"OfficePrinter",
 "icon": "",
 "language": &"GDScript",
-"path": "res://scripts/OfficePrinter.gd"
+"path": "res://scripts/Interactables/OfficePrinter.gd"
 }, {
 "base": &"PlayerState",
 "class": &"PlayerCrouch",
@@ -76,4 +76,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://scripts/states/State.gd"
+}, {
+"base": &"Interactable",
+"class": &"Telephone",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/Interactables/Telephone.gd"
 }])
