--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,6 +23,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/Interactables/OfficePrinter.gd"
 }, {
+"base": &"CharacterBody3D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/player.gd"
+}, {
 "base": &"PlayerState",
 "class": &"PlayerCrouch",
 "icon": "",
@@ -76,6 +82,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://scripts/states/State.gd"
+}, {
+"base": &"Resource",
+"class": &"Task",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/Task.gd"
 }, {
 "base": &"Interactable",
 "class": &"Telephone",
